--- a/app/src/components/style.module.less
+++ b/app/src/components/style.module.less
@@ -5,40 +5,43 @@
     align-items: center;
     height: 100vh;
     background-image: url('../assets/AnimeBg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
 
-    .searchBar {
-        width: 50%;
-        text-align: center;
+.searchBar {
+    width: 50%;
+    text-align: center;
 
-        img {
-            margin-bottom: 20px;
-            width: 30vw;
+    img {
+        margin-bottom: 20px;
+        width: 30vw;
+    }
+
+    .inputWrapper {
+        position: relative;
+        width: 100%;
+
+        input {
+            padding: 15px;
+            padding-left: 50px;
+            width: 100%;
+            border: none;
+            border-radius: 30px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            font-size: 1.2rem;
+            outline: none;
+            font-family: var(--font-family);
         }
 
-        .inputWrapper {
-            position: relative;
-            width: 100%;
-
-            input {
-                padding: 15px;
-                padding-left: 50px;
-                width: 100%;
-                border: none;
-                border-radius: 30px;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-                font-size: 1.2rem;
-                outline: none;
-                font-family: var(--font-family)
-            }
-
-            .icon {
-                position: absolute;
-                left: 15px;
-                top: 50%;
-                transform: translateY(-50%);
-                font-size: 1.4rem;
-                color: #aaa;
-            }
+        .icon {
+            position: absolute;
+            left: 15px;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 1.4rem;
+            color: #aaa;
         }
     }
 }
@@ -72,6 +75,66 @@
 
         p {
             margin: 15px;
+        }
+    }
+}
+
+/* Loader */
+.theLoader {
+    background-color: #000000a0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+
+    .loader {
+        position: fixed;
+        top: 45%;
+        left: 48%;
+        z-index: 999;
+        width: 56.56px;
+        height: 56.56px;
+        background: white;
+        clip-path: polygon(0 0, 50% 15%, 100% 0, 85% 50%, 100% 100%, 50% 85%, 0 100%, 15% 50%);
+        mask: radial-gradient(circle closest-side, #0000 92%, #000) top / 100% 33.4%,
+            radial-gradient(circle closest-side, #0000 92%, #000) left / 33.4% 33.4%,
+            radial-gradient(circle 5px, #0000 92%, #000) center/33.3% 33.3%,
+            radial-gradient(circle closest-side, #0000 92%, #000) right / 33.4% 33.4%,
+            radial-gradient(circle closest-side, #0000 92%, #000) bottom/100% 33.4%;
+        mask-repeat: no-repeat;
+        animation: l4 1.5s infinite linear;
+    }
+
+}
+
+@keyframes l4 {
+    100% {
+        transform: rotate(1turn);
+    }
+}
+
+.downloadButton {
+
+    a {
+        text-decoration: none;
+        border: none;
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px 80px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 50px;
+            cursor: pointer;
+            font-family: var(--font-family);
+            font-size: 1.2rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
         }
     }
 }
