--- a/app/src/components/style.module.less
+++ b/app/src/components/style.module.less
@@ -33,11 +33,12 @@
             font-size: 1.2rem;
             outline: none;
             font-family: var(--font-family);
+            margin-left: -30px;
         }
 
         .icon {
             position: absolute;
-            left: 15px;
+            left: -8px;
             top: 50%;
             transform: translateY(-50%);
             font-size: 1.4rem;
@@ -137,4 +138,13 @@
             gap: 10px;
         }
     }
+}
+
+.error {
+    color: red;
+    font-size: 1.5rem;
+    font-family: var(--font-family);
+    margin: 10px 0;
+    padding: 10px;
+    text-align: center;
 }
