Add link to contribution page in footer and style adjustments

--- a/app/src/components/style.module.less
+++ b/app/src/components/style.module.less
@@ -57,6 +57,7 @@
     font-size: 1.4rem;
 
     .made {
+
         p {
             display: flex;
             justify-content: center;
@@ -76,6 +77,14 @@
 
         p {
             margin: 15px;
+
+            a {
+                text-decoration: none;
+                color: white;
+                cursor: pointer;
+                transition: color 0.2s ease;
+
+            }
         }
     }
 }
